# backend/src/server.ts
@@ -1,27 +1,76 @@
 import express, { Request, Response } from 'express';
+
 import mongoose from 'mongoose';
 import cors from 'cors';
+import cookieParser from 'cookie-parser';
 import dotenv from "dotenv";
 import path from "path";
 import jwt from 'jsonwebtoken';
+import helmet from 'helmet';
 import rateLimit, { RateLimitRequestHandler } from 'express-rate-limit';
 import swaggerJsdoc from "swagger-jsdoc";
 import swaggerUi from "swagger-ui-express";
 import fs from 'fs';
-import { Tspec, TspecDocsMiddleware } from "tspec";
-import {User, IUser} from './models'; // Adjust the path as necessary
 
 
-dotenv.config({ path: path.resolve(process.cwd(), '../.env') }); //must be run from ./backend to access .env in root
+import {Server} from 'http'; //for types
+import {AddressInfo} from 'net'; // for types
+
+const mode : string = process.env.NODE_ENV!;
+if (mode === 'production') {
+    dotenv.config({ path: path.resolve(process.cwd(), '../.env.production') }); // must be run from ./backend to access .env in root
+}
+else{
+    dotenv.config({ path: path.resolve(process.cwd(), '../.env') }); // Default to .env for development
+}
+    
 const app: express.Express = express();
 const port: number | string = process.env.PORT || 3001;
+const apiUrl: string = process.env.API_URL!;
 const jwtSecret: string = process.env.JWT_SECRET!;
-const mongoUri: string = process.env.MONGODB_URI!;
+const cloudflareKey : string = process.env.TURNSTILE_SECRET_KEY!; // your secret key
+const verificationUrl : string = 'https://challenges.cloudflare.com/turnstile/v0/siteverify';
 
-// mongoose.connect(mongoUri).catch((err : any) => console.log(err));
-// mongoose.connection.on("error", (err : any) => {
-//   console.log(err);
-// });
+console.log(`Logging to check: ${port} and ${apiUrl}`);
+
+
+export const verifyTurnstileToken = async (cfToken: string): Promise<boolean> => {
+    
+  
+    const res = await fetch(verificationUrl, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: new URLSearchParams({
+        secret: cloudflareKey,
+        response: cfToken,
+      }),
+    });
+  
+    const data = await res.json();
+  
+    return data.success === true;
+  };
+
+//// MODELS
+import {User, IUser, Patient, IPatient} from './models'; 
+
+//// DATABASE (MONGODB)
+let mongoUri : string
+if (mode === 'test'){
+    mongoUri = process.env.MONGODB_TEST_URI!;
+} else {
+    mongoUri = process.env.MONGODB_URI!;
+}
+
+mongoose.connect(mongoUri).catch((err : any) => console.log(err));
+mongoose.connection.on("error", (err : any) => {
+  console.log(err);
+});
+
+
+
+
+//// MIDDLEWARES
 
 // Set up rate limiter: maximum of 100 requests per 15 minutes per IP
 const limiter : RateLimitRequestHandler = rateLimit({
@@ -30,27 +79,63 @@ const limiter : RateLimitRequestHandler = rateLimit({
     message: "Too many requests from this IP, please try again after 15 minutes",
 });
 
+// Define the CSP directives
+const cspDirectives : any  = {
+    "default-src": ["'self'"],
+    "script-src": [
+        "'self'",
+    "https://challenges.cloudflare.com"
+    ],
+    "style-src": ["'self'", "https://fonts.googleapis.com/"],
+    "img-src": ["'self'", "data:"],
+    "font-src": ["'self'", "https://fonts.gstatic.com"],
+    "connect-src": [
+        "'self'",
+        "https://challenges.cloudflare.com"
+    ],
+    "object-src": ["'none'"],
+    "base-uri": ["'self'"],
+    "form-action": ["'self'"],
+    "block-all-mixed-content": [],
+    "upgrade-insecure-requests": [],
+  };
+
 app.use(express.json());
+app.use(cookieParser());
+app.use(cors({
+    origin: process.env.FRONTEND_URL,
+    credentials: true,
+  }));
 app.use(limiter);
-app.use(cors());
+app.use(
+    helmet.contentSecurityPolicy({
+      directives: cspDirectives,
+    })
+  );
+
+
+
+
+
+//// ROUTES
 
 // Swagger configuration
 const swaggerOptions = {
-  swaggerDefinition: {
-      openapi: "3.0.0", // Specify the API version
-      info: {
-          title: "API Documentation",
-          version: "1.0.0",
-          description: "API documentation using Swagger",
-      },
-      servers: [
-          {
-              url: `http://localhost:${port}`, // Change this to your production URL
-          },
-      ],
-  },
-  apis: ["./src/**/*.ts"], // Path to the API docs (JSDoc comments)
-};
+    swaggerDefinition: {
+        openapi: "3.0.0", // Specify the API version
+        info: {
+            title: "API Documentation",
+            version: "1.0.0",
+            description: "API documentation using Swagger",
+        },
+        servers: [
+            {
+                url: mode==='production' ? apiUrl : `${apiUrl}${port}`, // Change this to your production URL
+            },
+        ],
+    },
+    apis: ["./src/**/*.ts"], // Path to the API docs (JSDoc comments)
+  };
 
 // Generate Swagger specification
 const swaggerDocs = swaggerJsdoc(swaggerOptions);
@@ -58,7 +143,6 @@ app.use("/api/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocs));
 
 // Save the Swagger documentation to a file
 const outputFilePath = __dirname+'/docs'; // Specify the output file path
-console.log(outputFilePath);
 
 if (!fs.existsSync(outputFilePath)){
     fs.mkdirSync(outputFilePath);
@@ -86,37 +170,8 @@ fs.writeFileSync(outputFilePath+'/swagger.json', JSON.stringify(swaggerDocs, nul
  *               additionalProperties: true
  */
 app.get('/api/swagger.json', (req: Request, res: Response) => {
-    console.log(outputFilePath);
     res.status(200).send(swaggerDocs); // Serve the Swagger JSON file for external access
 });
-
-//test
-
-/**
- * @openapi
- * /api/test:
- *   get:
- *     summary: Test endpoint
- *     description: A simple test to check the server
- *     operationId: getTest
- *     tags:
- *       - Test
- *     responses:
- *       200:
- *         description: Successful response
- */
-
-app.get('/api/test', (req : Request, res : Response) => {
-    // console.log(mongoURI);
-    try {
-    console.log("GET /test called");
-    res.send(port+' buiahbwd');
-    }
-    catch (err : any){
-      res.send(err)
-    }
-    
-  })
 
 // Registration Route
 /**
@@ -145,10 +200,30 @@ app.get('/api/test', (req : Request, res : Response) => {
  *     responses:
  *       201:
  *         description: User registered successfully
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                   
+ * 
  *       400:
  *         description: Error registering user
  */
-app.post('/api/register', async (req: Request, res: Response) => {
+app.post('/api/register', async (req: Request, res: Response)  => {
+
+    const cfToken : string = req.body['cf-turnstile-response'];
+    if (!cfToken) {
+        res.status(400).json({ error: 'Missing Turnstile token' });
+        return
+    }
+
+    const isHuman : boolean = await verifyTurnstileToken(cfToken);
+    if (!isHuman) {
+        res.status(403).json({ error: 'Failed Turnstile verification' });
+        return
+    }
+
     try {
         const user : IUser = new User({
             email: req.body.email,
@@ -156,8 +231,8 @@ app.post('/api/register', async (req: Request, res: Response) => {
         });
 
         await user.save(); // Save user to the database
-        // res.status(201).send('User registered');
-        res.status(201).json({email: user.email})
+        res.status(201).send({message:'User registered'});
+        // res.status(201).json({email: user.email})
     } catch (err : any) {
         res.status(400).json({error: err.errorResponse.errmsg});
     }
@@ -191,21 +266,44 @@ app.post('/api/register', async (req: Request, res: Response) => {
  *       201:
  *         description: User logged in successfully
  *       400:
- *         description: Error loggin in user
+ *         description: Error logging in user
  */
-app.post('/api/login', async (req: Request, res: Response ) => {
+app.post('/api/login', async (req: Request, res: Response )  => {
+
+    const cfToken : string = req.body['cf-turnstile-response'];
+    if (!cfToken) {
+        res.status(400).json({ error: 'Missing Turnstile token' });
+        return
+    }
+
+    const isHuman : boolean = await verifyTurnstileToken(cfToken);
+    if (!isHuman) {
+        res.status(403).json({ error: 'Failed Turnstile verification' });
+        return
+    }
+
     try {
         const user : IUser | null  = await User.findOne({ email: req.body.email });
         
         if (user && (await user.checkPassword(req.body.password))) {
-            const token : string = jwt.sign({ email: user.email }, jwtSecret, { expiresIn: '1h' });
-            res.json({ token });
-            console.log(token);
+            const jwtToken : string = jwt.sign({ email: user.email }, jwtSecret, { expiresIn: '1h' });
+
+            res.cookie('token', jwtToken, {
+                httpOnly: true,
+                secure: true, // true if production process.env.NODE_ENV === 'production' ||
+                sameSite: 'strict', // or 'Lax' based on your needs
+                maxAge: 60 * 60 * 1000, // 1 hour
+              });
+            res.status(201).json({ message: 'Login successful' });
             
             }
 
+        else if (user && !(await user.checkPassword(req.body.password))) {
+            res.status(401).json({message : 'Invalid credentials'});
+        }
+
         else {
-            res.status(401).send('Invalid credentials');
+            res.status(404).json({message : 'User not found'});
         }
         
     } catch (err : any) {
@@ -214,29 +312,144 @@ app.post('/api/login', async (req: Request, res: Response ) => {
     }
 });
 
-// Protected Route
-app.get('/dashboard', async (req: Request, res: Response) => {
-    const token : string | undefined = req.headers['authorization']?.split(' ')[1];
-    const user : IUser | null  = await User.findOne({ email: req.body.email });
-
-    if (token) {
-    jwt.verify(token, jwtSecret, (err: any, user: any) => {
-        if (err) res.sendStatus(403); // Unauthorized access
-        res.send(user);
-        
+// Logout Route
+/**
+ * @openapi
+ * /api/logout:
+ *   post:
+ *     summary: Logout current user
+ *     description: Clears the authentication cookie, logging out the user.
+ *     operationId: postLogout
+ *     tags:
+ *       - User
+ *     responses:
+ *       200:
+ *         description: Successfully logged out
+ *       401:
+ *         description: User not authenticated
+ */
+app.post('/api/logout', async (req: Request, res: Response) => {
+    res.clearCookie('token', {
+      httpOnly: true,
+      secure: true, // true if production process.env.NODE_ENV === 'production' ||,
+      sameSite: 'strict',
     });
+    res.json({ message: 'Logged out successfully' });
+  });
+
+// Protected dashboard Route
+/**
+ * @openapi
+ * /api/dashboard:
+ *   post:
+ *     summary: Retrieve user patient data
+ *     description: Queries the user's id (email address) and returns their personal medical information.
+ *     operationId: postDashboard
+ *     tags:
+ *       - User
+ *       - Patient 
+ *     responses:
+ *       201:
+ *         description: Successfully retrieved Patient data
+ *       401:
+ *         description: Error retrieving Patient data
+ */
+app.post('/api/dashboard', async (req: Request, res: Response) => {
+    const jwtToken : string | undefined = req.cookies['token'];
+    var verified=false
+    if (jwtToken) {
+        jwt.verify(jwtToken, jwtSecret, async (err: any) => {
+            if (err) {
+                return res.status(403).send({message:"Invalid token.", error:err}); // Unauthorized access
+                
+            }
+            
+            else {
+                verified=true
+            }
+        });
+    }
+    else {
+        res.status(401).send({message : "No token received."})
+    }
+
+
+    try {
+        
+        if (verified) {
+            const patient : IPatient | null  = await Patient.findOne({ id: req.body.userEmail });
+            res.status(201).json(patient);
+        }
+        
+        } catch(err : any) {
+            // throw new Error(err)
+            res.status(500).json({error:err, message : "Database error, unable to retrieve data"});
+        }
+
+    });
+
+
+/**
+ * @openapi
+ * /api/update:
+ *   patch:
+ *     summary: Update user patient data
+ *     description: Updates the user's patient information with what they entered.
+ *     operationId: postUpdate
+ *     tags:
+ *       - User
+ *       - Patient 
+ *     responses:
+ *       201:
+ *         description: Successfully updated Patient data
+ *       401:
+ *         description: Error updating Patient data
+ */
+app.patch('/api/update', async (req: Request, res: Response) => {
+    const jwtToken : string | undefined = req.cookies['token'];
+    const updatedData : IPatient = req.body.newData
+
+    let verified = false;
+    if (jwtToken) {
+        
+        jwt.verify(jwtToken, jwtSecret, async (err: any) => {
+            if (err) {
+                return res.status(403).send({message:"Invalid token.", error:err}); // Unauthorized access
+                
+            }
+            
+            else {
+                verified=true
+            }
+        });
     
     }
     else {
-        res.sendStatus(401); // Unauthenticated
+        res.status(401).send({message : "No token received."})
     }
+     
 
-});
+    // Validate payload
+    if (!updatedData) {
+        res.status(400).json({ message: "Invalid request: Updated Patient data is empty" });
+    }
+    else if ( typeof updatedData !== 'object' || !updatedData.id || !updatedData.active || !updatedData.name) {
+        res.status(400).json({ message: "Invalid request: Patient data missing required fields" });
+    }
+    try {
+         
+        if (verified){
+            await Patient.updateOne({ id: updatedData.id }, updatedData, {upsert:true});
+        
+            res.status(201).send({message: 'Your changes have been saved successfully.'})
+            }
+        
+        } catch(err : any) {
+            // throw new Error(err)
+            res.status(500).json({error : err, message: "Database error, unable to save updated data"});
+        }
 
-// Root route
-app.get('/', (req: Request, res: Response) => {
-    res.send('Hello World!');
-});
+    });
 
 
 // Close database connection on exit
@@ -253,8 +466,10 @@ process.on('SIGINT', async () => {
   });
 
 // Start the server
-app.listen(port, () => {
-    console.log(`Express is listening at http://localhost:${port}`);
+const server : Server = app.listen(port, () => {
+    const addressInfo = server.address() as AddressInfo; // Type assertion
+    const assignedPort : number = addressInfo.port; // Get the dynamically assigned port
+    console.log(`Express is listening at port: ${assignedPort}`);
 });
 
-export default app;
+export {app, server};
